--- a/client/package.json
+++ b/client/package.json
@@ -15,8 +15,10 @@
     "@fontsource/roboto": "^5.0.4",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.6",
+    "axios": "^1.4.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.14.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
