--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,8 @@
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.4",
     "@mui/icons-material": "^5.11.16",
-    "@mui/material": "^5.13.6",
+    "@mui/lab": "^5.0.0-alpha.136",
+    "@mui/material": "^5.14.0",
     "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
