--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.4",
+    "@hookform/resolvers": "^3.3.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/lab": "^5.0.0-alpha.136",
     "@mui/material": "^5.14.0",
@@ -24,7 +25,8 @@
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.1",
     "react-toastify": "^9.1.3",
-    "redux": "^4.2.1"
+    "redux": "^4.2.1",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
