--- a/client/package.json
+++ b/client/package.json
@@ -20,14 +20,17 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@stripe/react-stripe-js": "^2.1.2",
     "@stripe/stripe-js": "^2.1.1",
+    "@types/react-slick": "^0.23.10",
     "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.4",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.1",
+    "react-slick": "^0.29.0",
     "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
+    "slick-carousel": "^1.8.1",
     "yup": "^1.2.0"
   },
   "devDependencies": {
